🐛FIX: the overflow of card on hover

--- a/src/screens/UserDashBoard.css
+++ b/src/screens/UserDashBoard.css
@@ -4,6 +4,7 @@
     top: 0px;
     left: 0;
     right: 0;
+    z-index: 2;
   }
   
 .quizzes{
